# rust-router

./: Cargo.toml  readme.md
benches/: routing.rs
common/: Cargo.toml
common/src/: builder.rs  lib.rs
examples/: help_command.rs  large.rs  size.rs  with_builder.rs  with_docs.rs
experiments/: doc_api_ideas.rs
option_map/: Cargo.toml
option_map/src/: lib.rs
resource_routing/: Cargo.toml
resource_routing/src/: lib.rs
src/: builder.rs  doc.rs  lib.rs  uri.rs
