[package]
name = "router"
version = "0.1.0"
edition = "2021"

[features]
single-hyphen-option-names = []
eq-separator = []

[dependencies]
common = {path = "./common"}
opt_map = {path = "option_map"}

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "routing"
harness = false

[workspace]
members = [
  "common",
  "resource_routing",
]
